fixed some issues with text getting too wide. implemented more locally scoped css variables to manage changes over the various screen sizes

--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,11 @@ body {
     font-weight: 500;
     color: var(--color-text-gray);
     line-height: 1.5;
+    max-inline-size: 60ch;
+    text-align: center;
+    text-wrap: balance;
+    justify-self: center;
+
 }
 
 /* Shared Color Properties */
